# easy-gui-prompt

./: .gitignore  .gptignore  .pre-commit-config.yaml  .python_repo_template.toml  LICENSE.txt  README.md  __update_version__.py  makefile  pyproject.toml  ruff.toml
docs/: README.md  easy_gui_prompt.easy_gui_prompt.md  easy_gui_prompt.md
easy_gui_prompt/: easy_gui_prompt.py
examples/: example_1.py
src/easy_gui_prompt/: __init__.py
tests/: test_easy_gui_prompt.py
